prometheus/grafana-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: kube-prometheus-stack
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.kubernetes.giuseppebosa.eu`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80

  tls:
    secretName: grafana-certificate
